Missing some directory creations, and reimplement the auto updater